fixed clear button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body>
     <main>
         <H1>Penny Flip Game</H1>
-        <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+        <div> 
+            <div>
+            <div>Penny Image Display, Button Controls, and Status Message</div> 
+            <img id="penny-image" src="assets/images/penny-heads.jpg"
+            <div class="controls">
+                <button id="flip"> Flip the Penny!</button>
+                <button id="Clear">Clear Scoreboard</button>
+            </div>
+            <div class="message-container">
+                <h3 id="message">Let's Get Rolling!</h3>
+            </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
@@ -33,6 +42,7 @@
                     </tbody>
                 </table>
             </div>
+        </div>
         </div>
     </main>
     <script src="assets/js/script.js"></script>
